retrieve and read SSL certificate -> #16, #17 (wip)