@@ -4,6 +4,7 @@ import main.exception.InvalidURIException;
 import main.exception.InvalidURLException;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 
@@ -11,9 +12,14 @@ public class URLVerifier {
 
     private URLVerifier() {}
 
-    public static void verifyURL(String url) {
+    public static URL getURLFromString(String urlString) {
+        URL url;
         try {
-            new URL(url).toURI();
+            if (!urlString.startsWith("https://")) {
+                throw new MalformedURLException();
+            }
+            url = new URI(urlString).toURL();
+            return url;
         } catch (MalformedURLException e) {
             throw new InvalidURLException(e);
         } catch (URISyntaxException e) {
